--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
-    <string name="app_name">DeHaatAssignment</string>
+    <string name="app_name">DeHaat</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="dehaat">DeHaat</string>
     <string name="login">Login</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="error">Field can not be blank</string>
+    <string name="invalid_email">Invalid EmailId</string>
+    <string name="invalid_password">Password length should be atleast 6 digit</string>
+    <string name="invalid_mobile">Mobile should be 10 digit</string>
+    <string name="click_here_to_retry">Click here to Retry</string>
 </resources>
